--- a/src/components/stage-selector/stage-selector.css
+++ b/src/components/stage-selector/stage-selector.css
@@ -1,22 +1,97 @@
+@import "../../css/units.css";
+
+$header-height: 5rem;
+
 .stage-selector {
+    position: relative; /* for the child element border */
     height: 100%;
-    padding: 0.5rem;
+
+    /* TODO: Identical to stage-header */
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: white;
-    border-color: lightgray;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 0.5rem; 
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    border-bottom: 0;
+    color: #575e75;
+    border-top-left-radius: $space;
+    border-top-right-radius: $space;
 }
 
-.stage-selector.is-selected {
-    border-color: #1dacf4;
+/* 
+    To prevent stage selector from shifting a few pixels when selected,
+    stretch + overlay this see-through + click-through element of the same 
+    size, over the stage selector.
+
+    Using this method because adding an .is-selected class to the stage
+    with an inset box shadow didn't work.
+*/
+.border {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    border-top-left-radius: $space;
+    border-top-right-radius: $space;
+
+    border-left: 2px solid #1dacf4;
+    border-right: 2px solid #1dacf4;
+    border-top: 2px solid #1dacf4;
+    pointer-events: none;
+}
+
+.border.is-selected {
+    display: block;
 }
 
 .header {
-    min-height: 5rem;
-    background-color: blue; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    height: $header-height;
+
+    padding: 0.5rem 0.5rem 0.5rem 0.25rem;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: white;
+    color: #575e75;
+    border-top-left-radius: $space;
+    border-top-right-radius: $space;
+    border-bottom: 1px solid #eaeaea;
 }
+
+.title {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 0.625rem;
+    font-weight: bold;
+    color: #575e75;
+}
+
+.count {
+    padding: 0.25rem 1rem;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 0.625rem;
+    font-weight: bold;
+    color: #575e75;
+    background: #ededed;
+    border-radius: 0.5rem;
+}
+
+.label {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 0.5rem;
+    font-weight: bold;
+    color: #575e75;
+}
+
+.body {
+    padding: $space;
+    height: calc(100% - $header-height);
+    background-color: #f9f9f9;
+}
+
+.costume-canvas {
+    display: block;
+    border-radius: $space;
+    border-color: #e9eef2;
+    border-width: 2px;
+}
+
